--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,10 @@
 
 	<target name="all" depends="compile.js">
 		<echo message="Build completed." />
+		<concat destfile="${build.dir}/cssua.demo.js">
+			<fileset file="${build.dir}/antixss.js" />
+			<fileset file="${build.dir}/cssua.min.js" />
+		</concat>
 	</target>
 
 </project>
